--- a/css/style.css
+++ b/css/style.css
@@ -5154,6 +5154,9 @@ textarea.form-control-lg {
 .modal-dialog-scrollable .modal-body {
   overflow-y: auto;
 }
+.modal-dialog-scrollable .modal-body2 {
+  overflow-y: auto;
+}
 
 .modal-dialog-centered {
   display: flex;
